--- a/src/components/rxjs/console/Console.css
+++ b/src/components/rxjs/console/Console.css
@@ -1,8 +1,18 @@
 .console-choices {
     margin: auto;
-    width: 25%;
+    width: 40%;
     text-align: left;
     padding-left: 0;
+    display: flex;
+}
+
+.console-choices #console-choices-left {
+    margin-right: 20px;
+}
+
+.console-choices #console-choices-right {
+    flex-grow: 1;
+    margin-left: 20px;
 }
 
 .console-choice input {
