--- a/src/components/rxjs/mouseposition/MousePosition.css
+++ b/src/components/rxjs/mouseposition/MousePosition.css
@@ -1,7 +1,13 @@
+#throttling {
+    text-align: center;
+    margin-bottom: 5px;
+}
+
 .canvas {
     text-align: center;
     border: 2px solid black;
     margin: auto;
+    margin-top: 5px;
     width: 50%;
     height: 500px;
 }
