--- a/src/components/rxjs/mouseposition/MousePosition.css
+++ b/src/components/rxjs/mouseposition/MousePosition.css
@@ -3,11 +3,10 @@
     margin-bottom: 5px;
 }
 
-.canvas {
+.mouse-position-page .canvas {
     text-align: center;
     border: 2px solid black;
-    margin: auto;
-    margin-top: 5px;
+    margin: 5px auto auto;
     width: 50%;
     height: 500px;
 }
